test/integration/bad/new/fatal_error-bad2.stan
transformed data {
    fatal_error(1:10);
}
